--- a/index.html
+++ b/index.html
@@ -28,12 +28,19 @@
   <body>
 
     <div class="navbar">
-      <a href="#">Performa Support</a>
-      <ul>
-        <li><a href="#">Test</a></li>
-        <li><a href="#">Test2</a></li>
-      </ul>
+      <div class="container">
+        <div class="row">
+
+
+          <a href="#">Performa Support</a>
+          <ul>
+            <li><a href="#">Profiel</a></li>
+            <li><a href="#">Wat doe ik?</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
     </div>
+  </div>
 
     <div class="main">
       <div class="container">
