Snelle website aanpassing

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
         <div class="row">
           <div class="twelve columns">
             <h1>- Koen Molenaar  -</h1>
-            <h4>Websites voor ZZP'ers mooi en simpel. Ik doe het. Niet voor een duur uurtarief, maar voor een vast bedrag.</h4>
-
             <a href="#profiel" class="btn">Kijk verder.</a>
           </div>
         </div>
@@ -55,9 +53,11 @@
           <h2><a href="#">Mijn profiel.</a></h2>
           <hr>
           <img src="img/profiel_foto.jpg" alt="Koen Molenaar" title="Koen Molenaar" />
-          <p>
-            Ik ben Koen Molenaar en ik ben 15 jaar. Ik maak simpele 1-pagina websites voor zzp'ers, geen duur uurtarief, maar voor een vast bedrag. Ik zit nu op <a href="http://www.hetbaarnschlyceum.nl" target="_blank">Het Baarnsch Lyceum</a> in het derde jaar gymnasium. In mijn vrije tijd maak ik websites en nu heb ik besloten om dat voor geld te gaan doen. Niet teveel natuurlijk, ongeveer 50 euro per website, terwijl elke website rond de 10 uur werk is voor mij. Waarschijnlijk duurt het een tijdje voor uw website af is, maar dan heeft u ook wat!
-          </p>
+          <p>Hoi! Ik ben Koen Molenaar, 20 jaar oud en tweedejaarsstudent
+          Business & IT. In mijn vrije tiid speel ik graag spellen, lees ik
+          boeken of ben ik aan het programmeren. Daarnaast werk ik nu bij
+          <a href="https://curious-inc.com">Curious Inc.</a> als Student
+          Software Engineer.</p>
         </div>
       </div>
     </div>
