--- a/homepage/index.html
+++ b/homepage/index.html
@@ -192,7 +192,7 @@
   
   <div>
     <a class="read-more button"
-      href="/homepage/contact/">Read more →</a>
+      href="/homepage/contact/"> →</a>
   </div>
   
 </article>
@@ -224,7 +224,7 @@
   
   <div>
     <a class="read-more button"
-      href="/homepage/about/">Read more →</a>
+      href="/homepage/about/"> →</a>
   </div>
   
 </article>
