--- a/nl/homepage/about/index.html
+++ b/nl/homepage/about/index.html
@@ -6,7 +6,8 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Hoi hoi! ik ben Koen Molenaar. Ik studeer Cybersecurity aan de University of Twente en op deze website post ik write-ups &amp;amp; blogs over cybersecurity!" />
+<meta name="description" content="Hoi hoi! ik ben Koen Molenaar. Ik studeer Cybersecurity aan de University of Twente en op deze website post ik write-ups &amp; blogs over cybersecurity!
+" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="https://www.koenmolenaar.nl/nl/homepage/about/" />
@@ -41,7 +42,8 @@
 <meta property="og:locale" content="nl" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Over">
-<meta property="og:description" content="Hoi hoi! ik ben Koen Molenaar. Ik studeer Cybersecurity aan de University of Twente en op deze website post ik write-ups &amp;amp; blogs over cybersecurity!" />
+<meta property="og:description" content="Hoi hoi! ik ben Koen Molenaar. Ik studeer Cybersecurity aan de University of Twente en op deze website post ik write-ups &amp; blogs over cybersecurity!
+" />
 <meta property="og:url" content="https://www.koenmolenaar.nl/nl/homepage/about/" />
 <meta property="og:site_name" content="Koen Molenaar / Home" />
 
