--- a/nl/write-ups/index.html
+++ b/nl/write-ups/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   
-    <title>Write-ups :: Koen Molenaar / Home</title>
+    <title>Write-Ups :: Koen Molenaar / Home</title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,7 +40,7 @@
 
 <meta property="og:locale" content="nl" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Write-ups">
+<meta property="og:title" content="Write-Ups">
 <meta property="og:description" content="" />
 <meta property="og:url" content="https://www.koenmolenaar.nl/nl/write-ups/" />
 <meta property="og:site_name" content="Koen Molenaar / Home" />
@@ -162,7 +162,7 @@
 
   <div class="content">
     
-  <h1 class="section-header">Write-ups<a href="https://www.koenmolenaar.nl/nl/write-ups/" class="hanchor" arialabel="Anchor">⌗</a></h1>
+  <h1 class="section-header">Write-Ups<a href="https://www.koenmolenaar.nl/nl/write-ups/" class="hanchor" arialabel="Anchor">⌗</a></h1>
   
   <section class="posts">
     
@@ -202,7 +202,7 @@
   
   <div>
     <a class="read-more button"
-      href="/nl/write-ups/jeff0falltrades-sandbox-crackme/">Lees meer →</a>
+      href="/nl/write-ups/jeff0falltrades-sandbox-crackme/"> →</a>
   </div>
   
 </article>
