--- a/write-ups/index.html
+++ b/write-ups/index.html
@@ -6,7 +6,8 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="These are all my public write-ups on various cybersecurity challenges." />
+<meta name="description" content="These are all my public write-ups on various cybersecurity challenges.
+" />
 <meta name="keywords" content="write-ups, ctf, reverse engineering, malware analysis" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="https://www.koenmolenaar.nl/write-ups/" />
@@ -41,11 +42,12 @@
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="Write-ups">
-<meta property="og:description" content="These are all my public write-ups on various cybersecurity challenges." />
+<meta property="og:description" content="These are all my public write-ups on various cybersecurity challenges.
+" />
 <meta property="og:url" content="https://www.koenmolenaar.nl/write-ups/" />
 <meta property="og:site_name" content="Koen Molenaar / Home" />
 
-  <meta property="og:image" content="https://www.koenmolenaar.nl">
+  <meta property="og:image" content="https://www.koenmolenaar.nl/">
 
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
@@ -207,7 +209,7 @@
   
   <div>
     <a class="read-more button"
-      href="/write-ups/jeff0falltrades-sandbox-crackme/">Read more →</a>
+      href="/write-ups/jeff0falltrades-sandbox-crackme/"> →</a>
   </div>
   
 </article>
