--- a/homepage/about/index.html
+++ b/homepage/about/index.html
@@ -6,7 +6,8 @@
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Hi there! I&amp;rsquo;m Koen Molenaar. I&amp;rsquo;m a Cybersecurity Msc student at the University of Twente and on this website I post write-ups &amp;amp; blogs about cybersecurity." />
+<meta name="description" content="Hi there! I&rsquo;m Koen Molenaar. I&rsquo;m a Cybersecurity Msc student at the University of Twente and on this website I post write-ups &amp; blogs about cybersecurity.
+" />
 <meta name="keywords" content="" />
 <meta name="robots" content="noodp" />
 <link rel="canonical" href="https://www.koenmolenaar.nl/homepage/about/" />
@@ -41,7 +42,8 @@
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="About">
-<meta property="og:description" content="Hi there! I&amp;rsquo;m Koen Molenaar. I&amp;rsquo;m a Cybersecurity Msc student at the University of Twente and on this website I post write-ups &amp;amp; blogs about cybersecurity." />
+<meta property="og:description" content="Hi there! I&rsquo;m Koen Molenaar. I&rsquo;m a Cybersecurity Msc student at the University of Twente and on this website I post write-ups &amp; blogs about cybersecurity.
+" />
 <meta property="og:url" content="https://www.koenmolenaar.nl/homepage/about/" />
 <meta property="og:site_name" content="Koen Molenaar / Home" />
 
