--- a/nl/homepage/index.html
+++ b/nl/homepage/index.html
@@ -192,7 +192,7 @@
   
   <div>
     <a class="read-more button"
-      href="/nl/homepage/about/">Lees meer →</a>
+      href="/nl/homepage/about/"> →</a>
   </div>
   
 </article>
@@ -224,7 +224,7 @@
   
   <div>
     <a class="read-more button"
-      href="/nl/homepage/contact/">Lees meer →</a>
+      href="/nl/homepage/contact/"> →</a>
   </div>
   
 </article>
